--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
             </svg>
         </div>
         <p>A Family Celebration & Picnic for Eid Al-Fitr 2026</p>
+        <p>This is a private event by invitation only</p>
     </div>
 
     <div class="content-wrapper">
