--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Eid Al-Fitr 2026 Celebration RSVP</title>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/bmns1/gzring/refs/heads/main/logo_gz.png">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Lato:wght@300;400;700&family=Playfair+Display:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -388,13 +389,16 @@
                              <option value="Henna">Henna Artist (supplies provided)</option>
                         </optgroup>
                         <optgroup label="Items to Bring">
-                            <option value="Popsicles">Popsicles (50 count)</option>
+                            <option value="Popsicles">lollipops (50 count)</option>
                             <option value="Juice">Juice (for 50+)</option>
                             <option value="TeaCoffee">Tea and Coffee thermos</option>
-                            <option value="Dessert">Dessert of your choice</option>
-                            <option value="Cupcakes">Cupcakes (30 - no vanilla/choc)</option>
-                            <option value="Cake">Cake (for 40 - no vanilla/choc)</option>
+                            <option value="Dessert">Homemade Dessert of your choice</option>
+                            <option value="Cupcakes">Cupcakes (30 - no vanilla extract)</option>
+                            <option value="Cake">Cake (for 40 - no vanilla extract)</option>
                             <option value="JuiceBox">Juice boxes (50+ for kids)</option>
+                        </optgroup>
+                        <optgroup label="Not decided">
+                            <option value="Popsicles">it'll be a surprise</option>
                         </optgroup>
                     </select>
                 </div>
