--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                             <option value="JuiceBox">Juice boxes (50+ for kids)</option>
                         </optgroup>
                         <optgroup label="Not decided">
-                            <option value="Popsicles">it'll be a surprise</option>
+                            <option value="Surprise">it'll be a surprise</option>
                         </optgroup>
                     </select>
                 </div>
