--- a/index.html
+++ b/index.html
@@ -420,9 +420,11 @@
             </div>
         </div>
 
-        <div class="prayer-note">
-            "Enjoy lunch served immediately following Jummuah prayer, Inshallah."
-        </div>
+        <div class="prayer-note" style="font-style: normal; font-size: 1.3rem; line-height: 1.6;">
+    🥘 Lunch will be served immediately following <strong>Jummuah prayer</strong>, Inshallah.
+    <br>
+    ☕ 🥤 Refreshments will be available all day long!
+</div>
 
         <div class="section-header">
             <h3>Festivities & Joy</h3>
