--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
                                 <option value="Cupcakes">Cupcakes (30 - no vanilla extract)</option>
                                 <option value="Cake">Cake (for 40 - no vanilla extract)</option>
                                 <option value="JuiceBox">Juice boxes (50+ for kids)</option>
+                                <option value="Chips">Family-size chips (4x count)</option>
                             </optgroup>
                             <optgroup label="Not decided">
                                 <option value="Surprise">it'll be a surprise</option>
