--- a/index.html
+++ b/index.html
@@ -644,6 +644,18 @@
                 <div class="text-overlay">Venue this Eid</div>
             </div>
 
+            <div class="mySlides fade">
+                <img src="https://raw.githubusercontent.com/bmns1/events/refs/heads/main/facepaining.png" class="slide-img" alt="Community3">
+                <div class="text-overlay">Booked - Professional facepainter and henna artist 2pm - 4pm</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="https://raw.githubusercontent.com/bmns1/events/refs/heads/main/photobooth.png" class="slide-img" alt="Community3">
+                <div class="text-overlay">Photo Booth for extra fun</div>
+            </div>
+
+            
+
         </div>
 
         <div id="rsvpSection">
