--- a/index.html
+++ b/index.html
@@ -581,12 +581,12 @@
         
         <div class="activities-list">
             <span class="badge">🏰 Jump House</span>
-            <span class="badge">🌸 Henna for Girls</span>
+            <span class="badge">🌸 Pro Henna Artist for Girls</span>
             <span class="badge">💪 Tug-of-War</span>
             <span class="badge">🥔 Sack Race</span>
             <span class="badge">☁️ Cotton Candy</span>
             <span class="badge">🔴 Giant Connect-4</span>
-            <span class="badge">🎨 Pro Face Painting</span>
+            <span class="badge">🎨 Pro Face Painting Artist</span>
             <span class="badge">📸 Photo Booth</span>
             <span class="badge">⚽ Gaint Soccer Games</span>
         </div>
@@ -754,7 +754,7 @@
                             <optgroup label="Help Needed">
                                 <option value="Setup">Setup (arrive early)</option>
                                 <option value="Cleanup">Clean up (stay late)</option>
-                                 <option value="Henna">Henna Artist (supplies provided)</option>
+                                 <option value="Henna">Manage kids for the Henna Artist (2pm - 4pm)</option>
                             </optgroup>
                             <optgroup label="Items to Bring">
                                 <option value="Popsicles">lollipops (50 count)</option>
